fix:Arreglos para incorporar cambios en s3